Bug 412587 - [Crash] Kde Menu Editor
Summary: [Crash] Kde Menu Editor
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2019-10-04 03:12 UTC by Tony
Modified: 2019-10-14 05:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2019-10-04 03:12:40 UTC
Application: kmenuedit (5.17.80)

Qt Version: 5.13.1
Frameworks Version: 5.63.0
Operating System: Linux 5.2.14-1-default x86_64
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:

Open the editor and type anything in the search box, a single character triggers it.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Menu Editor (kmenuedit), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fddfef03140 (LWP 30322))]

Thread 5 (Thread 0x7fddf0eb7700 (LWP 30350)):
#0  0x00007fddfca876a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fddf1e70b8b in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007fddf1e70a37 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007fddfca80f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007fddff6674af in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fddf1837700 (LWP 30349)):
#0  0x00007fddfca876a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fddf1e70b8b in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007fddf1e70a37 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007fddfca80f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007fddff6674af in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fddf3fff700 (LWP 30326)):
#0  0x00007fddfc0d71b9 in g_mutex_lock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fddfc1251a0 in g_main_context_acquire () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fddfc125285 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fddfc12549f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fddfdb8b98b in QEventDispatcherGlib::processEvents (this=0x7fddec000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007fddfdb340cb in QEventLoop::exec (this=this@entry=0x7fddf3ffecf0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007fddfd96c021 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007fddfeb474f6 in ?? () from /usr/lib64/libQt5DBus.so.5
#8  0x00007fddfd96d1a2 in QThreadPrivate::start (arg=0x7fddfebc9d80) at thread/qthread_unix.cpp:360
#9  0x00007fddfca80f2a in start_thread () from /lib64/libpthread.so.0
#10 0x00007fddff6674af in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fddf96af700 (LWP 30325)):
#0  0x00007fddff65cbdf in poll () from /lib64/libc.so.6
#1  0x00007fddfd365742 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fddfd3663fa in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fddf98daf90 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007fddfd96d1a2 in QThreadPrivate::start (arg=0x55b8f38ccbf0) at thread/qthread_unix.cpp:360
#5  0x00007fddfca80f2a in start_thread () from /lib64/libpthread.so.0
#6  0x00007fddff6674af in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fddfef03140 (LWP 30322)):
[KCrash Handler]
#6  QTreeWidgetItem::treeModel (this=this@entry=0x0, v=v@entry=0x0) at itemviews/qtreewidget.cpp:2339
#7  0x00007fddfe855496 in QTreeWidgetItem::setSelected (this=this@entry=0x0, select=select@entry=true) at itemviews/qtreewidget.cpp:1015
#8  0x00007fddff7538d1 in TreeView::itemSelected (this=0x55b8f39eec50, item=0x0) at /usr/src/debug/kmenuedit5-5.17.80git.20190920T134935~c4a963f-ku.7.4.x86_64/treeview.cpp:619
#9  0x00007fddfdb60638 in QtPrivate::QSlotObjectBase::call (a=0x7ffd7da4fbf0, r=0x55b8f39eec50, this=0x55b8f3aa1850) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#10 QMetaObject::activate (sender=0x55b8f39eec50, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3789
#11 0x00007fddfe853c1e in QTreeWidget::currentItemChanged (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at .moc/moc_qtreewidget.cpp:445
#12 0x00007fddfe855cce in QTreeWidgetPrivate::_q_emitCurrentItemChanged (this=<optimized out>, current=..., previous=...) at itemviews/qtreewidget.cpp:2433
#13 0x00007fddfe85c9bf in QTreeWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at itemviews/qtreewidget.h:402
#14 0x00007fddfdb604d8 in QMetaObject::activate (sender=0x7fddf40018e0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3809
#15 0x00007fddfdae7f23 in QItemSelectionModel::currentChanged (this=this@entry=0x7fddf40018e0, _t1=..., _t2=...) at .moc/moc_qitemselectionmodel.cpp:466
#16 0x00007fddfdaea10c in QItemSelectionModel::setCurrentIndex (this=0x7fddf40018e0, index=..., command=...) at itemmodels/qitemselectionmodel.cpp:1414
#17 0x00007fddfe7d3b3d in QAbstractItemView::setCurrentIndex (this=this@entry=0x55b8f39eec50, index=...) at /usr/include/c++/9/bits/atomic_base.h:413
#18 0x00007fddff751e8e in TreeView::searchUpdated (this=0x55b8f39eec50, searchString=...) at /usr/src/debug/kmenuedit5-5.17.80git.20190920T134935~c4a963f-ku.7.4.x86_64/treeview.cpp:1850
#19 0x00007fddfdb60638 in QtPrivate::QSlotObjectBase::call (a=0x7ffd7da4ff50, r=0x55b8f39eec50, this=0x55b8f3b10520) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#20 QMetaObject::activate (sender=0x55b8f3b77710, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3789
#21 0x00007fddff0004c5 in KTreeWidgetSearchLine::searchUpdated (this=this@entry=0x55b8f3b77710, _t1=...) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/build/src/KF5ItemViews_autogen/include/moc_ktreewidgetsearchline.cpp:302
#22 0x00007fddff000a11 in KTreeWidgetSearchLine::updateSearch (treeWidget=0x55b8f39eec50, this=0x55b8f3b77710) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/src/ktreewidgetsearchline.cpp:347
#23 KTreeWidgetSearchLine::updateSearch (this=0x55b8f3b77710, treeWidget=0x55b8f39eec50) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/src/ktreewidgetsearchline.cpp:324
#24 0x00007fddff0005f4 in KTreeWidgetSearchLine::updateSearch (this=0x55b8f3b77710, pattern=...) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/src/ktreewidgetsearchline.cpp:320
#25 0x00007fddff0032d2 in KTreeWidgetSearchLine::Private::_k_activateSearch (this=<optimized out>) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/src/ktreewidgetsearchline.cpp:583
#26 KTreeWidgetSearchLine::Private::_k_activateSearch (this=<optimized out>) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/src/ktreewidgetsearchline.cpp:578
#27 KTreeWidgetSearchLine::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kitemviews-5.62.0git.20190917T213311~974e7b6-ku.9.2.x86_64/build/src/KF5ItemViews_autogen/include/moc_ktreewidgetsearchline.cpp:177
#28 0x00007fddfdb604d8 in QMetaObject::activate (sender=0x55b8f39573d0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3809
#29 0x00007fddfdb6d3ab in QSingleShotTimer::timeout (this=0x55b8f39573d0) at .moc/qtimer.moc:130
#30 QSingleShotTimer::timerEvent (this=0x55b8f39573d0) at kernel/qtimer.cpp:321
#31 0x00007fddfdb60e85 in QObject::event (this=0x55b8f39573d0, e=<optimized out>) at kernel/qobject.cpp:1282
#32 0x00007fddfe571c62 in QApplicationPrivate::notify_helper (this=this@entry=0x55b8f3899e80, receiver=receiver@entry=0x55b8f39573d0, e=e@entry=0x7ffd7da504d0) at kernel/qapplication.cpp:3703
#33 0x00007fddfe57b1e0 in QApplication::notify (this=0x7ffd7da507f0, receiver=0x55b8f39573d0, e=0x7ffd7da504d0) at kernel/qapplication.cpp:3449
#34 0x00007fddfdb35562 in QCoreApplication::notifyInternal2 (receiver=0x55b8f39573d0, event=0x7ffd7da504d0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:143
#35 0x00007fddfdb8ad50 in QTimerInfoList::activateTimers (this=0x55b8f3981410) at kernel/qtimerinfo_unix.cpp:643
#36 0x00007fddfdb8b5fc in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#37 idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:230
#38 0x00007fddfc1236b3 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#39 0x00007fddfc125460 in ?? () from /usr/lib64/libglib-2.0.so.0
#40 0x00007fddfc12549f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#41 0x00007fddfdb8b971 in QEventDispatcherGlib::processEvents (this=0x55b8f3982290, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#42 0x00007fddfdb340cb in QEventLoop::exec (this=this@entry=0x7ffd7da50710, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#43 0x00007fddfdb3bd32 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#44 0x00007fddff74b672 in kdemain (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kmenuedit5-5.17.80git.20190920T134935~c4a963f-ku.7.4.x86_64/main.cpp:104
#45 0x00007fddff58ee0b in __libc_start_main () from /lib64/libc.so.6
#46 0x000055b8f239408a in _start () at ../sysdeps/x86_64/start.S:120
[Inferior 1 (process 30322) detached]

Possible duplicates by query: bug 73428, bug 310799, bug 269790, bug 194115, bug 150213.

Reported using DrKonqi
Comment 1 Laurent Montel 2019-10-14 05:27:03 UTC
Git commit 3784ba131541a50ae4d19a6a741de0174ec1bbc3 by Laurent Montel.
Committed on 14/10/2019 at 05:26.
Pushed by mlaurent into branch 'master'.

Fix Bug 412587 - [Crash] Kde Menu Editor

M  +14   -10   treeview.cpp

https://commits.kde.org/kmenuedit/3784ba131541a50ae4d19a6a741de0174ec1bbc3