Fix Bug 412587 - [Crash] Kde Menu Editor

BUG: 412587